--- a/index.html
+++ b/index.html
@@ -13,5 +13,25 @@
     />
     <link rel="stylesheet" href="styles/index.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="app">
+      <main>
+        <div class="main-container">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus odio
+          praesentium ipsum dolorum, possimus aperiam quam molestias unde, vero
+          laborum doloremque distinctio qui quo autem explicabo sint
+          consequatur, laudantium provident.
+        </div>
+      </main>
+
+      <aside>
+        <div class="aside-container">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi,
+          veniam velit molestias laudantium veritatis voluptatem nesciunt libero
+          vitae accusantium, vero aspernatur optio error doloremque architecto
+          in ullam minus perspiciatis quas.
+        </div>
+      </aside>
+    </div>
+  </body>
 </html>
