--- a/index.html
+++ b/index.html
@@ -17,19 +17,38 @@
     <div id="app">
       <main>
         <div class="main-container">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus odio
-          praesentium ipsum dolorum, possimus aperiam quam molestias unde, vero
-          laborum doloremque distinctio qui quo autem explicabo sint
-          consequatur, laudantium provident.
+          <div class="back">
+            <img src="assets/icons/arrow-left-02.svg" alt="Ícone de VoltarS" />
+            <span>Voltar</span>
+          </div>
+
+          <h1>Formulário de matrícula</h1>
+          <p>
+            Preencha os dados abaixo para matricular seu filho na escola de
+            educação infantil Estrelas do Amanhã.
+          </p>
         </div>
       </main>
 
       <aside>
         <div class="aside-container">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi,
-          veniam velit molestias laudantium veritatis voluptatem nesciunt libero
-          vitae accusantium, vero aspernatur optio error doloremque architecto
-          in ullam minus perspiciatis quas.
+          <header>
+            <img src="assets/logo.svg" alt="Logo estrelas do Amanhã" />
+            <h2>
+              Porque cada momento de
+              <span> aprendizado </span>
+              conta
+            </h2>
+            <p>
+              Inscreva seu filho em nossa escola e veja-o florescer em um
+              ambiente acolhedor, seguro e estimulante.
+            </p>
+          </header>
+
+          <img
+            src="assets/Illustration.svg"
+            alt="Ilustração de uma professora com 4 crianças prestando atenção no que ela fala"
+          />
         </div>
       </aside>
     </div>
